--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
-# The directory Mix will write compiled artifacts to.
 /_build/
-
-# If you run "mix test --cover", coverage assets end up here.
-/cover/
-
-# The directory Mix downloads your dependencies sources to.
+/.elixir_ls/
 /deps/
-
-# Where third-party dependencies like ExDoc output generated docs.
 /doc/
-
-# If the VM crashes, it generates a dump, let's ignore it too.
-erl_crash.dump
-
-# Also ignore archive artifacts (built via "mix archive.build").
-*.ez
-
-# Ignore package tarball (built via "mix hex.build").
-modbus_server-*.tar
-
-# Temporary files, for example, from tests.
+/cover/
 /tmp/
+/.ipynb_checkpoints/
+
+*.overrides.env
+erl_crash.dump
+*.ez
+owen_cloud-*.tar
+*.log
