--- a/envs/.env
+++ b/envs/.env
@@ -7,3 +7,9 @@ ETH0_SLAVE=1
 CLOUD_HOST=localhost
 CLOUD_PORT=1234
 CLOUD_SLAVE=1
+
+CLOUD_ON_REGISTER=5000
+WIFI_COMMAND_REGISTER=5001
+WIFI_STATUS_REGISTER=5002
+WIFI_SSID_REGISTER=5003
+WIFI_PASSWORD_REGISTER=5040
