--- a/envs/.env
+++ b/envs/.env
@@ -10,6 +10,15 @@ CLOUD_SLAVE=1
 
 CLOUD_ON_REGISTER=5000
 WIFI_COMMAND_REGISTER=5001
-WIFI_STATUS_REGISTER=5002
-WIFI_SSID_REGISTER=5003
-WIFI_PASSWORD_REGISTER=5040
+WIFI_IP_REGISTER=5002
+WIFI_SSID_REGISTER=5020
+WIFI_PASSWORD_REGISTER=5060
+
+WIFI_SSID1_REGISTER=5100
+WIFI_SSID2_REGISTER=5150
+WIFI_SSID3_REGISTER=5200
+WIFI_SSID4_REGISTER=5250
+WIFI_SSID5_REGISTER=5300
+WIFI_SSID6_REGISTER=5350
+WIFI_SSID7_REGISTER=5400
+WIFI_SSID8_REGISTER=5450
