big april update

--- a/envs/.env
+++ b/envs/.env
@@ -8,6 +8,9 @@ CLOUD_HOST=localhost
 CLOUD_PORT=1234
 CLOUD_SLAVE=1
 
+CLOUD_ID=12345678901234567
+CLOUD_TOKEN=ABCDEFGH
+
 CLOUD_ON_REGISTER=5000
 WIFI_COMMAND_REGISTER=5001
 WIFI_IP_REGISTER=5002
