etc server configuration

--- a/envs/.env
+++ b/envs/.env
@@ -9,7 +9,9 @@ CLOUD_PORT=1234
 CLOUD_SLAVE=1
 
 CLOUD_ID=12345678901234567
+CLOUD_ID_REGISTER=61572
 CLOUD_TOKEN=ABCDEFGH
+CLOUD_TOKEN_REGISTER=61728
 
 CLOUD_ON_REGISTER=5000
 WIFI_COMMAND_REGISTER=5001
