--- a/envs/.env
+++ b/envs/.env
@@ -28,4 +28,7 @@ WIFI_SSID6_REGISTER=5350
 WIFI_SSID7_REGISTER=5400
 WIFI_SSID8_REGISTER=5450
 
-GPIO_STOP_INPUT=2
+GPIO_STOP_PIN=2
+GPIO_STOP_REGISTER=7000
+GPIO_FAN_PIN=8
+GPIO_FAN_REGISTER=7001
