--- a/envs/.env
+++ b/envs/.env
@@ -1,6 +1,4 @@
 # .env
-PASSWORD=password
-
 ETH0_IFACE=eth0
 ETH0_PORT=5432
 
@@ -12,6 +10,10 @@ CLOUD_ID=12345678901234567
 CLOUD_ID_REGISTER=61572
 CLOUD_TOKEN=ABCDEFGH
 CLOUD_TOKEN_REGISTER=61728
+
+I1_REGISTER=1000
+I2_REGISTER=1002
+I3_REGISTER=1004
 
 CLOUD_ON_REGISTER=5000
 WIFI_COMMAND_REGISTER=5001
@@ -32,3 +34,4 @@ GPIO_STOP_PIN=2
 GPIO_STOP_REGISTER=7000
 GPIO_FAN_PIN=8
 GPIO_FAN_REGISTER=7001
+
