--- a/envs/.env
+++ b/envs/.env
@@ -15,6 +15,8 @@ I1_REGISTER=1000
 I2_REGISTER=1002
 I3_REGISTER=1004
 
+MAX_DATA_FILES=2
+
 CLOUD_ON_REGISTER=5000
 WIFI_COMMAND_REGISTER=5001
 WIFI_IP_REGISTER=5002
