--- a/envs/.env
+++ b/envs/.env
@@ -37,3 +37,7 @@ GPIO_STOP_REGISTER=7000
 GPIO_FAN_PIN=8
 GPIO_FAN_REGISTER=7001
 
+FTP_PORT=8989
+FTP_FOLDER=data
+FTP_USER=user
+FTP_PASSWORD=password
