--- a/envs/.env
+++ b/envs/.env
@@ -20,6 +20,7 @@ MAX_DATA_FILES=2
 CLOUD_ON_REGISTER=5000
 WIFI_ERROR_REGISTER=5001
 WIFI_IP_REGISTER=5002
+PANEL_IP_REGISTER=5020
 
 WIFI_SSID1_REGISTER=5100
 WIFI_SSID2_REGISTER=5150
