--- a/envs/.env
+++ b/envs/.env
@@ -40,3 +40,7 @@ FTP_PORT=8989
 FTP_FOLDER=data
 FTP_USER=user
 FTP_PASSWORD=password
+
+PROXY_IFACE=wlan0
+PROXY_PANEL_PORT=5900
+PROXY_PI_PORT=6000
