--- a/envs/.env
+++ b/envs/.env
@@ -11,6 +11,14 @@ CLOUD_ID_REGISTER=61572
 CLOUD_TOKEN=ABCDEFGH
 CLOUD_TOKEN_REGISTER=61728
 
+PANEL_YEAR_REGISTER=800
+PANEL_MONTH_REGISTER=801
+PANEL_DAY_REGISTER=802
+PANEL_HOUR_REGISTER=803
+PANEL_MIN_REGISTER=804
+PANEL_SEC_REGISTER=805
+PANEL_MIL_REGISTER=806
+
 I1_REGISTER=1000
 I2_REGISTER=1002
 I3_REGISTER=1004
